@@ -1,5 +1,5 @@
 //
-// Document.cs
+// DocumentHashAlgorithm.cs
 //
 // Author:
 //   Jb Evain (jbevain@gmail.com)
@@ -28,51 +28,9 @@
 
 namespace Mono.Cecil.Cil {
 
-	public class Document {
-
-		string m_url;
-
-		DocumentType m_type;
-		DocumentHashAlgorithm m_hashAlgorithm;
-		DocumentLanguage m_language;
-		DocumentLanguageVendor m_languageVendor;
-
-		byte [] m_hash;
-
-		public string Url {
-			get { return m_url; }
-			set { m_url = value; }
-		}
-
-		public DocumentType Type {
-			get { return m_type; }
-			set { m_type = value; }
-		}
-
-		public DocumentHashAlgorithm HashAlgorithm {
-			get { return m_hashAlgorithm; }
-			set { m_hashAlgorithm = value; }
-		}
-
-		public DocumentLanguage Language {
-			get { return m_language; }
-			set { m_language = value; }
-		}
-
-		public DocumentLanguageVendor LanguageVendor {
-			get { return m_languageVendor; }
-			set { m_languageVendor = value; }
-		}
-
-		public byte [] Hash {
-			get { return m_hash; }
-			set { m_hash = value; }
-		}
-
-		public Document (string url)
-		{
-			m_url = url;
-			m_hash = new byte [0];
-		}
+	public enum DocumentHashAlgorithm {
+		[Guid (0x00000000, 0x0000, 0x0000, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00)] None,
+		[Guid (0x406ea660, 0x64cf, 0x4c82, 0xb6, 0xf0, 0x42, 0xd4, 0x81, 0x72, 0xa7, 0x99)] MD5,
+		[Guid (0xff1816ec, 0xaa5e, 0x4d10, 0x87, 0xf7, 0x6f, 0x49, 0x63, 0x83, 0x34, 0x60)] SHA1
 	}
 }
