@@ -1,5 +1,5 @@
 //
-// Document.cs
+// DocumentLanguage.cs
 //
 // Author:
 //   Jb Evain (jbevain@gmail.com)
@@ -28,51 +28,18 @@
 
 namespace Mono.Cecil.Cil {
 
-	public class Document {
-
-		string m_url;
-
-		DocumentType m_type;
-		DocumentHashAlgorithm m_hashAlgorithm;
-		DocumentLanguage m_language;
-		DocumentLanguageVendor m_languageVendor;
-
-		byte [] m_hash;
-
-		public string Url {
-			get { return m_url; }
-			set { m_url = value; }
-		}
-
-		public DocumentType Type {
-			get { return m_type; }
-			set { m_type = value; }
-		}
-
-		public DocumentHashAlgorithm HashAlgorithm {
-			get { return m_hashAlgorithm; }
-			set { m_hashAlgorithm = value; }
-		}
-
-		public DocumentLanguage Language {
-			get { return m_language; }
-			set { m_language = value; }
-		}
-
-		public DocumentLanguageVendor LanguageVendor {
-			get { return m_languageVendor; }
-			set { m_languageVendor = value; }
-		}
-
-		public byte [] Hash {
-			get { return m_hash; }
-			set { m_hash = value; }
-		}
-
-		public Document (string url)
-		{
-			m_url = url;
-			m_hash = new byte [0];
-		}
+	public enum DocumentLanguage {
+		[Guid (0x00000000, 0x0000, 0x0000, 0x00, 0x00, 0x0, 0x00, 0x00, 0x00, 0x00, 0x00)] None,
+		[Guid (0x63a08714, 0xfc37, 0x11d2, 0x90, 0x4c, 0x0, 0xc0, 0x4f, 0xa3, 0x02, 0xa1)] C,
+		[Guid (0x3a12d0b7, 0xc26c, 0x11d0, 0xb4, 0x42, 0x0, 0xa0, 0x24, 0x4a, 0x1d, 0xd2)] Cpp,
+		[Guid (0x3f5162f8, 0x07c6, 0x11d3, 0x90, 0x53, 0x0, 0xc0, 0x4f, 0xa3, 0x02, 0xa1)] CSharp,
+		[Guid (0x3a12d0b8, 0xc26c, 0x11d0, 0xb4, 0x42, 0x0, 0xa0, 0x24, 0x4a, 0x1d, 0xd2)] Basic,
+		[Guid (0x3a12d0b4, 0xc26c, 0x11d0, 0xb4, 0x42, 0x0, 0xa0, 0x24, 0x4a, 0x1d, 0xd2)] Java,
+		[Guid (0xaf046cd1, 0xd0e1, 0x11d2, 0x97, 0x7c, 0x0, 0xa0, 0xc9, 0xb4, 0xd5, 0xc)] Cobol,
+		[Guid (0xaf046cd2, 0xd0e1, 0x11d2, 0x97, 0x7c, 0x0, 0xa0, 0xc9, 0xb4, 0xd5, 0xc)] Pascal,
+		[Guid (0xaf046cd3, 0xd0e1, 0x11d2, 0x97, 0x7c, 0x0, 0xa0, 0xc9, 0xb4, 0xd5, 0xc)] CIL,
+		[Guid (0x3a12d0b6, 0xc26c, 0x11d0, 0xb4, 0x42, 0x0, 0xa0, 0x24, 0x4a, 0x1d, 0xd2)] JScript,
+		[Guid (0xd9b9f7b, 0x6611, 0x11d3, 0xbd, 0x2a, 0x0, 0x0, 0xf8, 0x8, 0x49, 0xbd)] SMC,
+		[Guid (0x4b35fde8, 0x07c6, 0x11d3, 0x90, 0x53, 0x0, 0xc0, 0x4f, 0xa3, 0x02, 0xa1)] MCpp
 	}
 }
